Add document truncation option for REST API search tool  (#2545)
